# python-uv

./: .coveragerc  .dockerignore  .env.sample  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  .prettierrc.json  .sqlfluff  .sqlfluffignore  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Fibonacci.py  LICENSE  README.md  codebook.toml  codecov.yaml  env.example  index.html  main.py  mkdocs.yml  noxfile.py  pyproject.toml  pyrightconfig.json  pytest.ini  renovate.json  ruff.toml  sitemap.xml  ty.toml
.devcontainer/: Dockerfile  buildWithRust.Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.devcontainer/docker-entrypoint-initdb.d/: .gitignore
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  environments.json  labeler.yml  protection.json  pull_request_template.md  release-drafter.yml
.github/workflows/: actionlint.yml  approve.yml  assign.yml  build.yml  devcontainer.yml  docker.yml  draft.yml  format.yml  gh-deploy.yml  labeler.yml  lint.yml  pr-agent.yml  publish-app.yml  publish-devcontainer.yml  pyright.yml  release.yml  ruff.yml  setting.yml  test.yml
.zed/: settings.json
about/: index.html
about/license/: index.html
configurations/: index.html
configurations/pre-commit/: index.html
configurations/pyright/: index.html
configurations/ruff/: index.html
configurations/test/: index.html
configurations/ty/: index.html
configurations/uv/: index.html
docker/: docker-compose.yml
docs/: index.md
docs/about/: index.md  license.md
docs/configurations/: index.md  pre-commit.md  pyright.md  ruff.md  test.md  ty.md  uv.md
docs/getting-started/: devcontainer.md  docker.md  index.md  vscode.md
docs/guides/: cookiecutter.md  index.md  pre-commit.md  pyright.md  ruff.md  test.md  ty.md  uv.md
docs/stylesheets/: extra.css
docs/usecases/: fastapi.md  index.md  jupyter.md  opencv.md
getting-started/: index.html
getting-started/devcontainer/: index.html
getting-started/docker/: index.html
getting-started/vscode/: index.html
guides/: index.html
guides/cookiecutter/: index.html
guides/pre-commit/: index.html
guides/pyright/: index.html
guides/ruff/: index.html
guides/test/: index.html
guides/tools/: index.html
guides/ty/: index.html
guides/uv/: index.html
python_uv/: __init__.py  chat.py
search/: search_index.json
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/nexxus/: apps.py
src/other/: 3年以内離職率  CSR_koyou_2022.北島入力平均年収修正.xlsx  data.csv  data2.csv  data_前半.xlsx  data_後半.xlsx  df3_2.xlsx  mika_kihontoukeiryo.xlsx  mika_soukan.xlsx  mikaronbun.ipynb  roatoka.ipynb  データ取得前半.xlsx  データ取得後半.xlsx  各変数の基本統計量.xlsx  各変数の相関.xlsx  研究データ.csv
src/titanic/: light_gbm.ipynb  submission.csv  test.ipynb
src/zemi/: calcium.csv  diabetes.csv
tests/: __init__.py  conftest.py
tests/tools/: test__config.py  test__logger.py  test__trace.py  test__tracer.py
tools/: __init__.py
tools/config/: __init__.py  fastapi.py  settings.py
tools/logger/: __init__.py  color.py  googlecloud.py  local.py  logger.py  style.py  type.py
tools/trace/: __init__.py  time.py  timer.py
tools/tracer/: __init__.py  timer.py
usecases/: index.html
usecases/fastapi/: index.html
usecases/jupyter/: index.html
(+27 files in other folders)
