[project]
name = "default"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."

authors = [{ name = "a5chin", email = "a5chin.origin+contact@gmail.com" }]
maintainers = [{ name = "a5chin", email = "a5chin.origin+contact@gmail.com" }]

requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "beartype>=0.22.9",
    "google-cloud-logging>=3.13.0",
    "jaxtyping>=0.3.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "cookiecutter-data-science>=2.3.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "mkdocs-material>=9.7.1",
    "nox>=2025.11.12",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "sqlfluff>=4.0.0",
    "ty>=0.0.14",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
